# AI-Smart-Compute-Orchestrator

./: .env.example  .gitignore  Makefile  New Text Document.txt  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
api/: dependencies.py  main.py
api/middleware/: auth.py  rate_limiter.py  request_logger.py
api/routers/: health.py  metrics.py  results.py  routing.py  tasks.py
config/: cost_config.yaml  routing_policy.yaml  settings.py
core/analyzer/: complexity_scorer.py  task_classifier.py  token_estimator.py  workload_analyzer.py
core/intelligence/: cost_calculator.py  decision_engine.py  ml_engine.py  rule_engine.py  scoring_engine.py
core/learning/: analytics.py  feedback_collector.py  model_trainer.py  routing_optimizer.py
core/monitor/: cpu_monitor.py  gpu_monitor.py  queue_monitor.py  resource_monitor.py
core/router/: execution_router.py  fallback_handler.py  load_balancer.py
dashboard/: app.py  data_fetcher.py
dashboard/components/: cost_savings.py  resource_heatmap.py  routing_trends.py  task_distribution.py
docker/: Dockerfile.api  Dockerfile.dashboard  Dockerfile.worker  entrypoint.api.sh
infrastructure/: celery_app.py  ollama_client.py  postgres_client.py  redis_client.py
scripts/: benchmark_routing.py  seed_db.py  simulate_workload.py
tests/integration/: test_routing_fallback.py  test_task_pipeline.py
tests/load/: locustfile.py
tests/unit/: test_cost_calculator.py  test_decision_engine.py  test_rule_engine.py  test_workload_analyzer.py
workers/: base_worker.py  cloud_worker.py  cpu_worker.py  gpu_worker.py  quantized_worker.py
